Fixed reference errors
Updated the CSS styles path and Script reference errors that are causing
404 errors.

--- a/d3/src/index.html
+++ b/d3/src/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<title>My title</title>
 		<script data-main="scripts/app/main" src="scripts/thirdparty/require.min.js"></script>
-		<link rel="stylesheet" href="css/text-styles.css">
+		<link rel="stylesheet" href="styles/text-styles.css">
 	</head>
 	<body>
 		
